changing title of page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Empress</title>
+    <title>Crassify</title>
     <link rel='stylesheet' type="text/css" href='support_files/css/empress.css'>
     <link rel='stylesheet' type="text/css" href='support_files/vendor/spectrum.min.css'>
     <link rel='stylesheet' type="text/css" href='support_files/vendor/toastr.min.css'>
